# serialport

app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/lzj/com/serialport/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  SerialPort.c
app/src/main/cpp/include/: SerialPort.h
app/src/main/java/lzj/com/serialport/: MainActivity.java  MyApplication.java  PrintActivity.java  WeiGuangActivity.java
app/src/main/java/lzj/com/serialport/escpos/: EscPosBuilder.java
app/src/main/java/lzj/com/serialport/escpos/command/: Align.java  Command.java  Cut.java  DrawerKick.java  Feed.java  FeedLines.java  Font.java  Initialize.java  Raw.java  RowSpac.java  Table.java
app/src/main/java/lzj/com/serialport/serialPort/: ReciveSaoResutListener.java  SerialHelper.java  SerialPort.java
app/src/main/java/lzj/com/serialport/utils/: EscPos.java  MyFunc.java  PrintUtils.java  QRUtils.java  SerialPortFinder.java
app/src/main/res/layout/: activity_main.xml  activity_print.xml  activity_wei_guang.xml  content_wei_guang.xml
app/src/main/res/values/: strings.xml
app/src/test/java/lzj/com/serialport/: ExampleUnitTest.java
doc/: ESC打印控制命令集.doc  ESC打印机的控制命令.doc
gradle/wrapper/: gradle-wrapper.properties
